fix what is spotify items alignment

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ section {
   width: 20%;
 }
 .what-is__content img {
-  width: 130px;
+  height: 110px;
   margin-bottom: 10px;
 }
 
